src/components/SharedComponents/Leaderboard/style.module.scss
.wrapper {
  @extend %contentBox;

  display: flex;
  flex-direction: column;
  align-items: center;

  width: max-content;

  padding-inline: $spacing / 2;
  padding-bottom: $spacing;

  > h2 {
    margin-bottom: $spacing / 2;
  }

  .list {
    padding: $spacing / 2;
    padding-bottom: 0;
    width: 100%;
    max-height: 22rem;
    overflow-y: auto;

    .row {
      display: flex;
      align-items: center;
      gap: $spacing;
      margin-bottom: $spacing;

      &:first-of-type .number > span:first-of-type {
        background: -webkit-linear-gradient(
          left,
          $color-text-secondary,
          $color-text-primary
        );
        background-clip: text;
        -webkit-text-fill-color: transparent;
      }

      .number {
        margin-top: 1rem;
        padding-right: $spacing / 2;

        > span {
          display: block;
          font-size: 0.75rem;
          width: 100%;
          margin-left: 0.1rem;

          // Big number text
          &:first-of-type {
            margin-left: 0;
            font-weight: 700;
            font-size: 3rem;
            letter-spacing: -0.1rem;
          }
        }
      }
    }
  }
}

